--- a/src/components/ground2.module.css
+++ b/src/components/ground2.module.css
@@ -1,12 +1,12 @@
 .ground {
     grid-column-start: 1;
     grid-column-end: 2;
-    grid-row-start: 2;
-    grid-row-end: 4;
+    grid-row-start: 3;
+    grid-row-end: 5;
 
     display: grid;
     grid-template-columns: auto 880px auto;
-    grid-template-rows:  50px 50px auto;
+    grid-template-rows: 20px 50px 50px auto;
 }
 
 .grass {
@@ -17,15 +17,15 @@
 
     grid-column-start: 1;
     grid-column-end: 4;
-    grid-row-start: 1;
-    grid-row-end: 3;
+    grid-row-start: 2;
+    grid-row-end: 4;
 }
 
 .dirt_gradient {
     grid-column-start: 1;
     grid-column-end: 4;
-    grid-row-start: 2;
-    grid-row-end: 4;
+    grid-row-start: 3;
+    grid-row-end: 5;
 
     background: linear-gradient(rgba(0,0,0,0),rgba(0,0,0,1) 70%, rgba(0,0,0,1) 100%);
 }
@@ -37,24 +37,23 @@
 
     grid-column-start: 1;
     grid-column-end: 4;
-    grid-row-start: 2;
-    grid-row-end: 4;
+    grid-row-start: 3;
+    grid-row-end: 5;
 }
 
 @media (max-width: 880px) {
     .ground {
         grid-template-columns: auto;
-        grid-template-rows: 50px 50px auto;
     }
     .grass {
         grid-column-end: 2;
     }
     .dirt_gradient {
         grid-column-end: 2;
-        height: 436px;
+        /* height: 436px; */
     }
     .dirt {
         grid-column-end: 2;
-        height: 436px;
+        /* height: 436px; */
     }
 }
