--- a/src/components/house2.module.css
+++ b/src/components/house2.module.css
@@ -1,12 +1,12 @@
 .container {
     grid-column-start: 1;
     grid-column-end: 2;
-    grid-row-start: 1;
-    grid-row-end: 3;
+    grid-row-start: 2;
+    grid-row-end: 4;
 
     display: grid;
     grid-template-columns: auto 35px 880px 35px auto;
-    grid-template-rows: 90px 30px 836px auto;
+    grid-template-rows: 90px 30px auto auto;
 }
 
 .roof_container {
@@ -37,6 +37,7 @@
 
     margin: 0;
     padding: 0;
+    padding-top: 20px;
     height: 100%;
 
     grid-column-start: 3;
@@ -46,7 +47,7 @@
 
     display: grid;
     grid-template-columns: auto 400px auto 400px auto;
-    grid-template-rows: auto 400px auto 400px auto;
+    grid-template-rows: auto
 }
 
 /*----------------------------MEDIA QUERIES-----------------------------------*/
@@ -82,30 +83,12 @@
         grid-column-start: 1;
         grid-column-end: 2;
 
-        grid-template-columns: 25px 48% 25px auto 25px;
-        grid-template-rows: 20px auto 20px 400px 20px;
+        grid-template-columns: 25px auto 25px auto 25px;
     }
 }
 
-/* .brick_in_scaffolding {
-    background-image: url('../images/brick.png');
-    background-repeat: repeat;
-    background-size: 150px 150px;
-    width: 225%;
-    margin: 0;
-    margin-left: 33%;
-    display: inline-block;
-    position: relative;
-    padding: 2%;
-    height: 100%;
-    left: -260%;
+@media (max-width: 650px) {
+    .brick {
+        grid-template-columns: 4% auto 4%;
+    }
 }
-
-.scaffolding {
-    width: 30%;
-    background-image: url("../images/scaffolding_blue_stairs.gif");
-    background-size: 100%;
-    background-repeat: repeat-y;
-    position: relative;
-    left: 101%;
-} */
