--- a/src/components/layout.module.css
+++ b/src/components/layout.module.css
@@ -15,22 +15,12 @@
     color: black;
 }
 
-.rand {
-    background: red;
-    width: 100%;
-    height: 100%;
-    z-index: 99999;
-    position: relative;
-    pointer-events: auto;
-    display: inline-block;
-}
-
-.rand2 {
-    display: inline-block;
-}
-
 .body_container {
     margin-top: 15%;
+
+    display: grid;
+    grid-template-columns:  auto;
+    grid-template-rows:  auto auto auto;
 }
 
 .clouds {
@@ -101,9 +91,6 @@
         padding-top: 20%;
         width: 100%;
     }
-    /* .design_body_container h1 {
-        width: 100%;
-    } */
 }
 
 @media (max-width: 500px) {
