--- a/src/components/recent_works.module.css
+++ b/src/components/recent_works.module.css
@@ -1,8 +1,12 @@
 .container {
-    position: relative;
+    padding: 0;
     z-index: 3;
-    padding-bottom: 0%;
     height: 100%;
+
+    grid-column-start: 1;
+    grid-column-end: 2;
+    grid-row-start: 1;
+    grid-row-end: 3;
 }
 
 .billboard_title_container {
